# job-seeker

./: .gitignore  README.md  pyproject.toml
src/: cover_letter.py  dict.py  linkedin.py  main.py  params.py  report_summary.py  wttj.py
src/data/: jobs_2026-03-24.json
src/data/cover_letters_2026-03-24/: banque-de-france_jobs_data-scientist-digitalisation-des-processus-lcb-ft-h-f_paris-1er-arrondissement_BDF_A1R0aL7.docx  banque-de-france_jobs_data-scientist-h-f_paris-9e-arrondissement.docx  bureaudestalents_jobs_data-science-manager-ia-h-f_puteaux_BUREA_oyPXZx0.docx  coface_jobs_data-scientists-ml-engineers_bois-colombes.docx  cospirit-groupe_jobs_data-scientist-junior-h-f_paris.docx  finfrog_jobs_data-scientist_paris_FINFR_D1kmqXG.docx  intelcia_jobs_ingenieur-data_neuilly-sur-seine.docx  mycophyto_jobs_data-scientist-bio-informaticien-h-f_grasse.docx  orano_jobs_data-scientist-ia-generative-f-h_chatillon_ORANO_rXKa58R.docx  primelis_jobs_data-science-consultant_levallois-perret.docx  qualees_jobs_data-scientist-ai-engineering_paris.docx  sicara_jobs_candidature-spontanee-theodo-data-ai_paris.docx  sicara_jobs_manager-consultant-senior-ai-advisory_paris.docx  step-consulting_jobs_data-scientist_grenoble.docx
src/data/daily_scrap/: jobs_2026-03-24.json  jobs_2026-03-25.json
src/data/on_demand/: mirakl_jobs_data-scientist-nlp-genai-catalog_paris.docx
src/data/resources/: SYSTEM_PROMPT.txt  cover_template.txt
src/data/test/: jobs_2026-03-24.json  leakmited_jobs_data-scientist_paris.docx
(+6 files in other folders)
